== 0.8.4

* Security Fix
  * Updated Rails to 3.2.10

== 0.8.3

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Patient search now uses Select2 JavaScript plugin
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript

== 0.8.2

* Enhancements
  * Updated to Rails 3.2.8

== 0.8.1

* Enhancements
  * Using unassigned => 1 for JSON request for stickies from Task Tracker
  * Simplified labels for doctor type on bulk mailing import page
  * Updated to Rails 3.2.7
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.8.0

* Enhancements
  * Mailing Changes:
    * Imports using Subject Codes instead of MRNs available
    * Imports now require the doctor type to be specified
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * Patients can now be filtered using comma-separated subject codes
  * About page reformatted to include links to github and contact information

* Refactoring
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
  * Consistent sorting and display of model counts used across all objects, (calls, clinics, doctors, mailings, users, etc)

* Bug Fix
  * Sticky requests from Task Tracker now correctly include stickies for Phone Calls and Visits that are unassigned

== 0.7.10

* Bug Fix
  * Removed quiet_assets code as it was causing issues with Rails 3.2.6

== 0.7.9

* Enhancements
  * CSV Exports added for:
    * Calls: Patient ID, Subject Code, Call Time, Call Type, Response, Participation, Exclusion, Berlin, ESS, Eligibility, Direction, Comments
    * Mailings: Patient ID, Subject Code, Sent Date, Response Date, Berlin, ESS, Eligibility, Participation, Exclusion, Comments